--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,10 @@
   justify-content: space-around;
 }
 
+.space-around {
+  justify-content: space-around;
+}
+
 .items-center {
   align-items: center;
 }
