--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,3 +7,16 @@
     width: 100%;
     background-color: #61dafb;
 }
+
+.btn {
+    background-color: #ffffff;
+    border-radius: 5px;
+    border: none;
+    margin: 5px;
+
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #f0f0f0;
+}
