--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,3 +20,12 @@
 .btn:hover {
     background-color: #f0f0f0;
 }
+
+.text-area {
+    border-width: 2px;
+    border-radius: 10px;
+    padding: 5px;
+
+    width: 300px;
+    height: 100px;
+}
