--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,3 +32,11 @@
     width: 300px;
     height: 100px;
 }
+
+.input-field {
+    border-width: 2px;
+    border-radius: 5px;
+    padding: 5px;
+
+    width: 300px;
+}
