--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,8 @@
     padding-bottom: 5px;
 
     width: 100%;
-    background-color: #61dafb;
+    /* background-color: #61dafb; */
+    border-bottom: 1px solid #979797;
 }
 
 .btn {
@@ -14,6 +15,8 @@
     border: none;
     margin: 5px;
     padding: 5px;
+
+    text-decoration: none;
 
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 
@@ -39,4 +42,21 @@
     padding: 5px;
 
     width: 300px;
+}
+
+@media screen and (max-width: 1100px) {
+    .landing-section {
+        flex-direction: column !important; 
+    }
+}
+
+.footer {
+    margin-top: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    width: 100%;
+    background-color: #282c34;
+
+    color: #ffffff;
 }
